# gmake-project

./: README.md  docker-compose.yml
android/: .gitignore
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
api/: .gitignore  Dockerfile.api  app.js  package-lock.json  package.json  server.js
api/config/: .env.local
api/src/controllers/: BlacklistController.js  LabelController.js  MailController.js  TokenController.js  UserController.js
api/src/middleware/: authMiddleware.js
api/src/models/: Blacklist.js  Counter.js  Label.js  Mail.js  User.js
api/src/routes/: blacklistRoutes.js  labelRoutes.js  mailRoutes.js  tokenRoutes.js  userRoutes.js
api/src/services/: BlacklistService.js  LabelService.js  MailService.js  UserService.js
api/src/utils/: authHelper.js  getNextSequence.js  tcpClient.js  urlUtils.js
backend/: CMakeLists.txt  Dockerfile.tcpserver  README.md
backend/src/: main.cpp
backend/src/Bloom/: BloomFilter.cpp  BloomFilter.h  HashFunctions.cpp  HashFunctions.h  InputValidator.cpp  InputValidator.h
backend/src/Commands/: BadRequestCommand.cpp  BadRequestCommand.h  CommandFactory.cpp  CommandFactory.h  DeleteCommand.cpp  DeleteCommand.h  GetCommand.cpp  GetCommand.h  ICommand.h  PostCommand.cpp  PostCommand.h
backend/src/Server/: CommandParser.cpp  CommandParser.h  ConnectionHandler.cpp  ConnectionHandler.h  Server.cpp  Server.h  ThreadManager.h
config/: .env.local
frontend/: Dockerfile.react  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  styles.css
frontend/src/contexts/: AuthContext.js
frontend/src/icons/: Icons.jsx
frontend/src/middlewares/: PrivateRoute.js
frontend/src/pages/: Login.jsx  MainPage.jsx  Register.jsx
frontend/src/services/: authServices.js  interceptor.js  mailService.js
wiki/: android.md  web.md
(+101 files in other folders)
